<resources>
    <string name="app_name">VAFMA</string>
    <string name="title_map">Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_about">About</string>
    <string name="title_excursions">Excursions</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_drawing">Drawing</string>
    <string name="title_login">Login</string>
    <string name="title_coupons">Coupons</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_firebase_test">FirebaseTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>