<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ecoicon"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_drawing"
        android:icon="@drawable/ic_baseline_redeem_24"
        android:title="@string/title_drawing" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_about_us_24"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/title_login" />

</menu>