<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.vafma.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_excursions"
        android:name="com.example.vafma.ui.excursions.ExcursionsFragment"
        android:label="@string/title_excursions"
        tools:layout="@layout/fragment_excursions" />


    <fragment
        android:id="@+id/navigation_drawing"
        android:name="com.example.vafma.ui.drawing.DrawingFragment"
        android:label="@string/title_drawing"
        tools:layout="@layout/fragment_drawing" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.vafma.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />


    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.vafma.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

</navigation>